[package]
name = "api-server"
version = "0.1.0"
authors = ["Jackson Warley <jtwarley@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["diesel_sqlite_pool"]